--- a/Customized-theme/lms/templates/certificates/_accomplishment-rendering.html
+++ b/Customized-theme/lms/templates/certificates/_accomplishment-rendering.html
@@ -201,8 +201,8 @@ todays_date = str(month)+" "+str(day)+", "+str(year)
                                 <span class="accomplishment-course-name">${accomplishment_copy_course_name}</span>
                             </div>
                             <div class="accomplishment-course-details">
-                                ${_('a course of study offered by')} <b> ${_('eduOnline')}</b> <br/> 
-				${_('an online learning platform')} ${_('through')} <b>${_('ECoDe')}</b>, <b> ${_('KPIT Technologies Ltd.')}</b> 
+                                ${_('a course of study offered by')} <b> ${_('PlatformName')}</b> <br/> 
+				${_('an online learning platform')} ${_('through')} <b>${_('OrganizationSubUnit')}</b>, <b> ${_('OrganizationFullName')}</b> 
                             </div>
                         </div>
                     </div>
@@ -234,7 +234,7 @@ todays_date = str(month)+" "+str(day)+", "+str(year)
                     </div>
                     <div class="accomplishment-footer">
                         <div>${_('HONOR CODE CERTIFICATE')}</div>
-                        <div>${_('*Authentication of this certificate is validated by KPIT')}</div>
+                        <div>${_('*Authentication of this certificate is validated by OrganasitionName')}</div>
                     </div>
                 </div>
             </div>
