--- a/Customized-theme/lms/templates/static_templates/about.html
+++ b/Customized-theme/lms/templates/static_templates/about.html
@@ -10,7 +10,7 @@
             <%block name="pageheader">${page_header or _("About")}</%block>
         </h1>
         <p>
-          KPIT eduOnline is an e-learning platform that offers interactive online courses for the employees.<br><br> The EduOnline allows the employees to access course content including videos, textbooks, and problems, <br><br>and to check their progress in the course. The EduOnline also offers a forum for discussion and a wiki<br><br>open to both employees and course team members to contribute. For course team members, <br><br>the EduOnline includes an Instructor Dashboard, with options for employees to enroll, produce reports, and <br><br>administer a course while it runs. One can access and use the EduOnline directly through a browser.
+         Write description about the Platform !!
 
         </p>
     </section>
